<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".view.GuestActivity">

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"/>

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="32dp"
        android:id="@+id/text_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmation"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/not_confirmation_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/no_confirmation"/>

        <RadioButton
            android:id="@+id/present_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/present"/>

        <RadioButton
            android:id="@+id/absent_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/absent"/>
    </RadioGroup>

    <Button
        android:layout_margin="16dp"
        android:id="@+id/button_save"
        android:layout_gravity="center"
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>